name:          clock
version:       0.3
stability:     stable
synopsis:      High-resolution clock functions: monotonic, realtime, cputime.
description:   A package for convenient access to high-resolution clock and
               timer functions of different operating systems.
               .
               POSIX layer was developed by Cetin Sert in 2009.
               .
               Windows layer was contributed by Eugene Kirpichov in 2010.
               .
               Both layers share the same surface API.
               .
               [Version Scheme]
               Major-@/R/@-ewrite . New-@/F/@-unctionality . @/I/@-mprovementAndBugFixes . @/P/@-ackagingOnly
               .
               * @PackagingOnly@ changes are made for quality assurance reasons.

copyright:     Copyright © Cetin Sert 2009-2012, Eugene Kirpichov 2010
license:       BSD3
license-file:  LICENSE
author:        Cetin Sert <cetin@corsis.eu>, Corsis Research; Eugene Kirpichov <ekirpichov@gmail.com>
maintainer:    Cetin Sert <cetin@corsis.eu>, Corsis Research
homepage:      http://corsis.github.com/clock/
bug-reports:   http://corsis.github.com/clock/issues
category:      System
build-type:    Simple
cabal-version: >= 1.6


source-repository head
    type:      git
    location:  git://github.com/corsis/clock.git


flag llvm
    description: compile via LLVM
    default    : False


library
    build-depends:       base >= 2 && <= 5
    exposed-modules:     System.Clock
    extensions:          ForeignFunctionInterface ScopedTypeVariables
    c-sources:           csec/clock.c
    include-dirs:        csec
    install-includes:    clock.h
    ghc-options:         -O2 -Wall
    
    if flag(llvm)
      ghc-options:       -fllvm -optlo-O3