name:          clock
version:       0.4.0.1
stability:     stable
synopsis:      High-resolution clock functions: monotonic, realtime, cputime.
description:   A package for convenient access to high-resolution clock and
               timer functions of different operating systems via a unified API.
               .
               POSIX code and surface API was developed by Cetin Sert in 2009.
               .
               Windows code was contributed by Eugene Kirpichov in 2010.
               .
               FreeBSD code was contributed by Finn Espen Gundersen on 2013-10-14.
               .
               OS X code was contributed by Gerolf Seitz on 2013-10-15.
               .
               [Version Scheme]
               Major-@/R/@-ewrite . New-@/F/@-unctionality . @/I/@-mprovementAndBugFixes . @/P/@-ackagingOnly
               .
               * @PackagingOnly@ changes are made for quality assurance reasons.

copyright:     Copyright © Cetin Sert 2009-2013, Eugene Kirpichov 2010, Finn Espen Gundersen 2013, Gerolf Seitz 2013
license:       BSD3
license-file:  LICENSE
author:        Cetin Sert <cetin@corsis.eu>, Corsis Research
maintainer:    Cetin Sert <cetin@corsis.eu>, Corsis Research
homepage:      http://corsis.github.com/clock/
bug-reports:   http://corsis.github.com/clock/issues
category:      System
build-type:    Simple
cabal-version: >= 1.6


source-repository head
    type:      git
    location:  git://github.com/corsis/clock.git


flag llvm
    description: compile via LLVM
    default    : False


library
    build-depends:       base >= 2 && <= 5
    exposed-modules:     System.Clock
    extensions:          ForeignFunctionInterface ScopedTypeVariables
    c-sources:           csec/clock.c
    include-dirs:        csec
    install-includes:    clock.h
    ghc-options:         -O2 -Wall
    
    if flag(llvm)
      ghc-options:       -fllvm -optlo-O3
